--- a/config-files/local/citadel-idp-backend-config.ini
+++ b/config-files/local/citadel-idp-backend-config.ini
@@ -6,6 +6,7 @@ env = local
 # if env is not prof and use-azure-blog-storage is true then only azure blob storage will be used for input files.
 # if property is missing its assumed ot be false if env is not prod.
 # Useful for scnearios when you may want to run on local but test the actual full integration with Azure servcies, set this to false
+use-azure-form-recognizer = True
 use-azure-blog-storage = True
 
 test-key = test-value
