--- a/config-files/local/citadel-idp-backend-config.ini
+++ b/config-files/local/citadel-idp-backend-config.ini
@@ -3,10 +3,10 @@
 env = local
 
 # This property has effect only if env is no prod i,e env is lcoal or dev.
-# if env is not prof and use-azure-blog-storage is true then only azure blob storage will be used for input files.
+# if env is not prof and use-azure-blob-storage is true then only azure blob storage will be used for input files.
 # if property is missing its assumed ot be false if env is not prod.
 # Useful for scnearios when you may want to run on local but test the actual full integration with Azure servcies, set this to false
-use-azure-blog-storage = True
+use-azure-blob-storage = True
 
 # if use-azure-form-recognizer is true then only form recognizer will be used for analyzing blobs.
 use-azure-form-recognizer = False
