--- a/config-files/prod/citadel-idp-backend-config.ini
+++ b/config-files/prod/citadel-idp-backend-config.ini
@@ -1,14 +1,14 @@
 [Main]
-# env can be local, pre-prod, prod
+# env can be local, prod
+# if property is missing its assumed to be local.
 env = prod
 
-# This property has effect only if env is no prod i,e env is lcoal or dev.
-# if env is not prof and use-azure-blob-storage is true then only azure blob storage will be used for input files.
-# if property is missing its assumed ot be false if env is not prod.
-# Useful for scnearios when you may want to run on local but test the actual full integration with Azure servcies, set this to false
+# if use-azure-blob-storage is true then only azure blob storage will be used for input files.
+# if property is missing its assumed to be true.
 use-azure-blob-storage = True
 
 # if use-azure-form-recognizer is true then only form recognizer will be used for analyzing blobs.
+# if property is missing its assumed to be false.
 use-azure-form-recognizer = True
 
 test-key = test-value
